--- a/points.html
+++ b/points.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <script src="https://p.trellocdn.com/power-up.min.js"></script>
+  <script src="/client.js"></script>
 </head>
 <body>
   <h3>Ajouter des points à la tâche</h3>
